Prevent Flex align in "jump to" buttons from blocking other stream elements

--- a/src/core/client/stream/tabs/Live/JumpToButton.css
+++ b/src/core/client/stream/tabs/Live/JumpToButton.css
@@ -1,15 +1,22 @@
 .jumpToContainer {
   position: relative;
 
-  top: -40px;
+  top: -20px;
   left: 0;
   width: 100%;
   height: 0px;
   z-index: 998;
 
-  text-align: center;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 
   background: transparent;
+}
+
+.noHeight {
+  height: 0px;
+  overflow: visible;
 }
 
 .jumpButton {
